<resources>
    <string name="app_name">Artist Grid</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save image</string>
    <string name="label_rows">Row lines</string>
    <string name="label_cols">Column lines</string>
    <string name="label_linewidth">Line thickness</string>
    <string name="label_colorpicker">Color picker</string>
    <string name="color">RGB color</string>
    <string name="action_share">Share ...</string>
    <string name="send_to">Send to ...</string>
    <string name="settings_activity_label">Settings</string>
    <string name="action_fullscreen">Full screen</string>
    <string name="action_grid">Change grid</string>
    <string name="action_filter_comic">Posterize</string>
    <string name="action_filter_edges">Edges</string>
    <string name="label_lineAlpha">Opaqueness</string>
    <string name="label_linecolor">Grid line color</string>
    <string name="action_menu_filter">Filter</string>
    <string name="label_square_grid">Square grid cells</string>
    <string name="header_settings_grid">Grid cells</string>
    <string name="header_settings_line">Grid lines</string>
    <string name="header_settings_experimental">Experimental</string>
    <string name="action_filter_gray">Black and White</string>
    <string name="action_filter_reset">Reset filters</string>
    <string name="label_savefileonexit">Save image file on exit</string>
    <string-array name="colors_array">
        <item>black</item>
        <item>white</item>
        <item>red</item>
        <item>green</item>
        <item>blue</item>
        <item>cyan</item>
        <item>magenta</item>
        <item>yellow</item>
    </string-array>
</resources>
