<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="at.juggle.imagegrid.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_grid"
        android:orderInCategory="80"
        android:title="@string/action_grid"
        android:icon="@android:drawable/ic_dialog_dialer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fullscreen"
        android:orderInCategory="100"
        android:title="@string/action_fullscreen"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_menu_filter"
        android:orderInCategory="90"
        android:title="@string/action_menu_filter"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom">
        <menu>
        <item
            android:id="@+id/action_filter_comic"
            android:orderInCategory="100"
            android:title="@string/action_filter_comic"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_filter_edges"
            android:orderInCategory="100"
            android:title="@string/action_filter_edges"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_filter_gray"
            android:orderInCategory="100"
            android:title="@string/action_filter_gray"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_filter_reset"
            android:orderInCategory="100"
            android:title="@string/action_filter_reset"
            app:showAsAction="never" />
        </menu>
    </item>
</menu>
