<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="at.juggle.imagegrid.DisplaySettingsActivity"
    tools:showIn="@layout/activity_display_settings">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header_settings_grid"
        android:id="@+id/textView1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_cows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/editRows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/label_rows"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_cols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editCols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editRows"
            android:ems="10"
            android:hint="@string/label_cols"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_square_grid"
        android:id="@+id/checkSquareGrid"
        android:layout_below="@id/editCols"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header_settings_line"
        android:id="@+id/textView2"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_linewidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/editLineWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editCols"
            android:ems="10"
            android:hint="@string/label_linewidth"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textSize="16sp"
            android:text="@string/label_lineAlpha"/>

        <SeekBar
            android:id="@+id/editLineAlpha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:layout_below="@+id/editLineWidth"
            android:hint="@string/label_lineAlpha"
            android:max="255" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/label_linecolor"
            android:textSize="16dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/color_spinner"
            android:layout_weight="0.6" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header_settings_experimental"
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_colorpicker"
        android:id="@+id/editColorpicker"
        android:layout_below="@+id/editLineWidth"
        android:layout_marginTop="8dp"/>

</LinearLayout>